--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -1,27 +1,38 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Post{% endblock %}
+{% block title %}Blog{% endblock %}
 
 {% block body %}
-    <h1>Post</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Title</th>
-                <td>{{ post.title }}</td>
-            </tr>
-            <tr>
-                <th>Body</th>
-                <td>{{ post.body }}</td>
-            </tr>
-            <tr>
-                <th>Tags</th>
-                <td>{{ post.tags }}</td>
-            </tr>
-        </tbody>
-    </table>
 
-    <a href="{{ path('post_index') }}">back to list</a>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="{{ path('post_index') }}" >Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Details</li>
+        </ol>
+    </nav>
+
+    <div class="card">
+        <h5 class="card-header">Posts</h5>
+
+        <div class="card-body">
+            <table class="table table-hover">
+                <tbody>
+                    <tr>
+                        <th>Title</th>
+                        <td>{{ post.title }}</td>
+                    </tr>
+                    <tr>
+                        <th>Body</th>
+                        <td>{{ post.body }}</td>
+                    </tr>
+                    <tr>
+                        <th>Tags</th>
+                        <td>{{ post.tags }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 
 {% endblock %}
