Add login with Google

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,8 @@
         <title>{% block title %}Welcome!{% endblock %}</title>      
         {% block stylesheets %}
             <link href="{{ asset('css/bootstrap.min.css','frontend') }}" rel="stylesheet" />
+            <link href="{{ asset('css/bootstrap-social.css','frontend') }}" rel="stylesheet" />
+            <link href="{{ asset('css/assets/css/font-awesome.css','frontend') }}" rel="stylesheet" />
             <link href="{{ asset('css/main.css','frontend') }}" rel="stylesheet" />
         {% endblock %}
     </head>
