--- a/templates/bundles/FOSUserBundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login_content.html.twig
@@ -33,6 +33,8 @@
             </label>
         </div>
         <input class="btn btn-lg btn-primary btn-block" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
-
+        <a class="btn btn-lg  btn-social btn-google btn-block" href="{{ path('google_login') }}" > 
+           <span class="fa fa-google"></span> Sign in with Google
+        </a>
     </fieldset>
 </form>
